Fix Alignment

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -139,6 +139,10 @@ button:focus {
       border-radius: 0.5rem;
       padding: 1rem;
       width: 100%;
+      text-align: center;
+      @include media-breakpoint-up(sm) {
+        text-align: left;
+      }
     }
   }
 }
